CSS fix: hide row scrollbar on Firefox

--- a/src/features/appointments/BookAppointmentForm.scss
+++ b/src/features/appointments/BookAppointmentForm.scss
@@ -27,10 +27,11 @@
 	display: flex;
     margin-left: 40px;
     overflow-x: scroll;
+    scrollbar-width: none; // hide scrollbar on Firefox
 }
 
 .form-row__children::-webkit-scrollbar { 
-    display: none; 
+    display: none;
 }
 
 // BookAppointmentForm 
